added media queries, fixed grid layout

--- a/code/index.html
+++ b/code/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+
   <!-- Change the title below -->
   <title>Succy News</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
 
 <body>
@@ -17,22 +20,24 @@
     <h1>Succy News</h1>
     <nav>
       <ul>
-        <li class="horizontal-list"><a href="#archive">Archive</a></li>
-        <li class="horizontal-list"><a href="#about">About</a></li>
-        <li class="horizontal-list"><a href="#contact">Contact</a></li>
+        <li><a href="#archive">Archive</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <i class="material-icons" style="font-size:36px">menu</i>
+    <i id="hamburger-menu" class="material-icons" style="font-size:36px">menu</i>
   </header>
 
   <main>
     <section class="big-news">
       <!-- The big news content -->
+      <img class="big-news-image" src="./images/echeveria.jpg" alt="picture of echeveria">
       <div class="big-news-text">
         <h2>Succulents are nice</h2>
-        <p>här skriver jag en text om suckulenter</p>
+        <p>här skriver jag en text om suckulenter här skriver jag en text om suckulenterhär skriver jag en text om
+          suckulenterhär skriver jag en text om suckulenterhär skriver jag en text om suckulenter
+        </p>
       </div>
-      <img class="big-news-image" src="./images/echeveria.jpg" alt="picture of echeveria">
     </section>
 
     <section class="news-grid">
