Made changes to logo, styled buttons and h3s and re-organized some of the css

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Header -->
     <header>
-      <img class="logo" src="./assets/salad-outline.svg" alt="logo with picture of a salad bowl">
+      <img class="logo" src="./assets/salad-outline.png" alt="logo with picture of a salad bowl">
       <div> 
         <h1>Veggie News</h1>
         <p class="site-subtitle">- your source to the latest in veggie eating!</p>
@@ -31,7 +31,8 @@
     <section class="big-news">  
       <div class="photo-display">
         <img class="main-picture" src="./assets/lupines-ries-bosch-unsplash.jpg" alt="Lupine flowers next to a field"/>
-        <p class="caption">Photo by Ries Bosch on Unsplash</p>
+        <p class="caption">Photo by <a href="https://unsplash.com/@ries_bosch?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ries Bosch</a> on <a href="https://unsplash.com/photos/purple-flowers-in-a-field-with-trees-in-the-background-MZ1opmPc1Cw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </p>
       </div>
       <h2>Lupine is the new protein</h2>
       <p class="main-news-article">
@@ -64,7 +65,9 @@
         <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <button>Read more</button>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>She made cheesecake cheeseless</h3>
@@ -75,6 +78,9 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>
@@ -89,6 +95,9 @@
       <p>
         Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.
       </p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>Beetroots back in season</h3>
@@ -98,6 +107,9 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>Growing friendships</h3>
@@ -106,6 +118,9 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>Fake fish is here to stay</h3>
@@ -115,6 +130,9 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>The tiniest tomatoes</h3>
@@ -123,6 +141,9 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
   </body>
 </html>
