added navigation to mobile-header

--- a/code/index.html
+++ b/code/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <!-- Change the title below -->
+  <title>Wanderlust</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Autour+One">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+
+  <div class="container">
+
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="header-mobile">
+        <h1>Wanderlust</h1>
+        <nav class="dropdown-menu">
+          <i class="fa-solid fa-bars fa-2xl dropdown-menu-icon"></i>
+          <div class="dropdown-menu-content">
+            <a href="inspiration.html">Inspiration</a>
+            <a href="hiking.html">Hiking</a>
+            <a href="climbing.html">Climbing</a>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <section class="big-news">
@@ -19,5 +42,7 @@
     <section class="">
       <!-- The other news  -->
     </section>
-  </body>
+  </div>
+</body>
+
 </html>
