finished layout, grids and header, added fonts

--- a/code/index.html
+++ b/code/index.html
@@ -4,25 +4,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  <meta name="theme-color" content="#F28482">
 
   <!-- Change the title below -->
-  <title>Succy News</title>
+  <title>SuccyNews</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Besley&family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600&display=swap">
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
 
-    <h1>Succy News</h1>
+    <h1>succy<span>news</span></h1>
     <nav>
       <ul>
-        <li><a href="#archive">Archive</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#archive">archive</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
     <i id="hamburger-menu" class="material-icons" style="font-size:36px">menu</i>
@@ -33,9 +35,9 @@
       <!-- The big news content -->
       <img class="big-news-image" src="./images/echeveria.jpg" alt="picture of echeveria">
       <div class="big-news-text">
-        <h2>Succulents are nice</h2>
-        <p>här skriver jag en text om suckulenter här skriver jag en text om suckulenterhär skriver jag en text om
-          suckulenterhär skriver jag en text om suckulenterhär skriver jag en text om suckulenter
+        <h2>Nice and juicy</h2>
+        <p>Fleshy leaves, stems or roots are unique features that allow these plants to thrive in arid environments.
+          Beauty without a fuzz you say? Well, yes please!
         </p>
       </div>
     </section>
@@ -44,8 +46,9 @@
       <!-- The other news  -->
       <div class="news-item">
         <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <h3>Same same, but not really </h3>
+        <p>The succulent syndrome is considered to be one of the most remarkable examples of convergent evolution across
+          the plant kingdom.</p>
       </div>
       <div class="news-item">
         <img src="./images/aloe.jpg" alt="picture of aloe">
@@ -85,7 +88,9 @@
     </section>
   </main>
 
-  <footer></footer>
+  <footer>
+    <p>©</p>
+  </footer>
 </body>
 
 </html>
